--- a/.github/workflows/sims_integrated.yml
+++ b/.github/workflows/sims_integrated.yml
@@ -9,9 +9,9 @@ on:
       SIMS:   { description: "試行回数/レース", required: true, default: "600", type: string }
       TOPN:   { description: "三連単 TOPN", required: true, default: "18", type: string }
       UNIT:   { description: "1点あたり(円)", required: true, default: "100", type: string }
-      FILTERS: { description: "例: require_odds=true,min_ev=1.2,odds_bands=01-09,10-19", required: false, default: "", type: string }
-      KEYMAN:  { description: "例: enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7", required: false, default: "enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7", type: string }
-      OUTDIR:  { description: "出力ディレクトリ", required: false, default: "scripts/sims", type: string }
+      FILTERS:{ description: "例: require_odds=true,min_ev=1.2,odds_bands=01-09,10-19,exclude_first1=false,only_first1=false,buy_in_top3=false,buy_thr=0.7", required: false, default: "", type: string }
+      KEYMAN: { description: "例: enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7", required: false, default: "enable=true,thr=0.7,boost=0.15,aggr=0.0,buy_in_top3=false,buy_thr=0.7", type: string }
+      OUTDIR: { description: "出力ディレクトリ", required: false, default: "scripts/sims", type: string }
 
 permissions:
   contents: write
@@ -35,7 +35,8 @@ jobs:
       - name: Install deps
         run: |
           python -m pip install --upgrade pip
-          pip install numpy pandas
+          # ← ここで joblib / scikit-learn を追加（TENKAI が使う）
+          pip install numpy pandas scikit-learn joblib
 
       - name: Parse FILTERS & KEYMAN
         id: parse
@@ -45,13 +46,10 @@ jobs:
         run: |
           set -euo pipefail
           parse_kvlist () {
-            # usage: parse_kvlist "a=1,b=2,c=3" PREFIX
             local s="$1"; local prefix="$2"
-            # split by comma, then by '='
             IFS=',' read -r -a pairs <<< "$s"
             for kv in "${pairs[@]}"; do
-              kv="$(echo "$kv" | xargs)"
-              [ -z "$kv" ] && continue
+              kv="$(echo "$kv" | xargs)"; [ -z "$kv" ] && continue
               if [[ "$kv" == *"="* ]]; then
                 k="$(echo "${kv%%=*}" | tr '[:lower:]' '[:upper:]' | tr -c 'A-Z0-9_' '_' | xargs)"
                 v="$(echo "${kv#*=}" | xargs)"
@@ -59,8 +57,7 @@ jobs:
               fi
             done
           }
-
-          # Defaults for filters (can be overridden)
+          # defaults
           echo "F_REQUIRE_ODDS=false" >> $GITHUB_OUTPUT
           echo "F_MIN_EV=0" >> $GITHUB_OUTPUT
           echo "F_ODDS_BANDS=" >> $GITHUB_OUTPUT
@@ -70,18 +67,14 @@ jobs:
           echo "F_ONLY_FIRST1=false" >> $GITHUB_OUTPUT
           echo "F_BUY_IN_TOP3=false" >> $GITHUB_OUTPUT
           echo "F_BUY_THR=0.7" >> $GITHUB_OUTPUT
-
-          # Defaults for keyman pack
-          echo "K_ENABLE=true" >> $GITHUB_OUTPUT
-          echo "K_THR=0.7" >> $GITHUB_OUTPUT
-          echo "K_BOOST=0.15" >> $GITHUB_OUTPUT
-          echo "K_AGGR=0.0" >> $GITHUB_OUTPUT
-
-          # Parse user-provided FILTERS and KEYMAN
+          echo "K_ENABLE=true"  >> $GITHUB_OUTPUT
+          echo "K_THR=0.7"      >> $GITHUB_OUTPUT
+          echo "K_BOOST=0.15"   >> $GITHUB_OUTPUT
+          echo "K_AGGR=0.0"     >> $GITHUB_OUTPUT
           [ -n "${FILTERS:-}" ] && parse_kvlist "$FILTERS" "F_"
-          [ -n "${KEYMAN:-}" ] && parse_kvlist "$KEYMAN"  "K_"
+          [ -n "${KEYMAN:-}" ]  && parse_kvlist "$KEYMAN"  "K_"
 
-      # 1) Pass1: キーマン抽出（predict-onlyで OK）
+      # 1) Pass1（キーマン抽出：predict-only）
       - name: Run Pass1 (keyman only)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -89,20 +82,16 @@ jobs:
           SIMS:  ${{ inputs.SIMS }}
           TOPN:  ${{ inputs.TOPN }}
           UNIT:  ${{ inputs.UNIT }}
-          OUTDIR: ${{ inputs.OUTDIR }}
+          OUTDIR:${{ inputs.OUTDIR }}
         run: |
           set -euo pipefail
           echo "[pass1] DATE=$DATE PID=$PID"
           python scripts/sims/sims.py \
-            --base public \
-            --dates "$DATE" \
-            --pids "$PID" \
-            --sims "$SIMS" \
-            --strategy trifecta_topN --topn "$TOPN" \
-            --predict-only \
-            --outdir "$OUTDIR"
+            --base public --dates "$DATE" --pids "$PID" \
+            --sims "$SIMS" --strategy trifecta_topN --topn "$TOPN" \
+            --predict-only --outdir "$OUTDIR"
 
-      # 2) ML推論（TENKAI）— 直読みでSimSが拾う前提のCSV生成
+      # 2) ML推論（TENKAI）: CSVを TENKAI/predictions/v1/<DATE>/<PID>/ に生成
       - name: Run TENKAI prediction
         env:
           DATE: ${{ inputs.DATE }}
@@ -119,7 +108,7 @@ jobs:
         run: |
           find TENKAI/predictions/v1/${{ inputs.DATE }} -maxdepth 2 -type f -name '*.csv' | sort || true
 
-      # 3) Pass2: MLを読み込んだ統合SimS
+      # 3) Pass2（ML取り込み + MODE分岐）
       - name: Run Pass2 (SimS integrated with ML)
         env:
           DATE:  ${{ inputs.DATE }}
@@ -128,26 +117,22 @@ jobs:
           SIMS:  ${{ inputs.SIMS }}
           TOPN:  ${{ inputs.TOPN }}
           UNIT:  ${{ inputs.UNIT }}
-          OUTDIR: ${{ inputs.OUTDIR }}
-          # parsed filters
-          F_REQUIRE_ODDS: ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
-          F_MIN_EV:       ${{ steps.parse.outputs.F_MIN_EV }}
-          F_ODDS_BANDS:   ${{ steps.parse.outputs.F_ODDS_BANDS }}
-          F_ODDS_MIN:     ${{ steps.parse.outputs.F_ODDS_MIN }}
-          F_ODDS_MAX:     ${{ steps.parse.outputs.F_ODDS_MAX }}
-          F_EXCLUDE_FIRST1: ${{ steps.parse.outputs.F_EXCLUDE_FIRST1 }}
-          F_ONLY_FIRST1:    ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
-          F_BUY_IN_TOP3:    ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
-          F_BUY_THR:        ${{ steps.parse.outputs.F_BUY_THR }}
-          # parsed keyman
+          OUTDIR:${{ inputs.OUTDIR }}
+          F_REQUIRE_ODDS:    ${{ steps.parse.outputs.F_REQUIRE_ODDS }}
+          F_MIN_EV:          ${{ steps.parse.outputs.F_MIN_EV }}
+          F_ODDS_BANDS:      ${{ steps.parse.outputs.F_ODDS_BANDS }}
+          F_ODDS_MIN:        ${{ steps.parse.outputs.F_ODDS_MIN }}
+          F_ODDS_MAX:        ${{ steps.parse.outputs.F_ODDS_MAX }}
+          F_EXCLUDE_FIRST1:  ${{ steps.parse.outputs.F_EXCLUDE_FIRST1 }}
+          F_ONLY_FIRST1:     ${{ steps.parse.outputs.F_ONLY_FIRST1 }}
+          F_BUY_IN_TOP3:     ${{ steps.parse.outputs.F_BUY_IN_TOP3 }}
+          F_BUY_THR:         ${{ steps.parse.outputs.F_BUY_THR }}
           K_ENABLE: ${{ steps.parse.outputs.K_ENABLE }}
           K_THR:    ${{ steps.parse.outputs.K_THR }}
           K_BOOST:  ${{ steps.parse.outputs.K_BOOST }}
           K_AGGR:   ${{ steps.parse.outputs.K_AGGR }}
         run: |
           set -euo pipefail
-          echo "[pass2] MODE=$MODE  DATE=$DATE PID=$PID"
-
           ARGS_COMMON="--base public --dates $DATE --pids $PID \
             --sims $SIMS --strategy trifecta_topN --topn $TOPN \
             --keyman-enable $K_ENABLE --keyman-threshold $K_THR \
@@ -155,7 +140,7 @@ jobs:
             --ml-root TENKAI/predictions/v1 \
             --outdir $OUTDIR"
 
-          # optional filters
+          # optional gates
           [ "${F_EXCLUDE_FIRST1,,}" = "true" ] && ARGS_COMMON="$ARGS_COMMON --exclude-first1"
           [ "${F_ONLY_FIRST1,,}"    = "true" ] && ARGS_COMMON="$ARGS_COMMON --only-first1"
           [ "${F_BUY_IN_TOP3,,}"    = "true" ] && ARGS_COMMON="$ARGS_COMMON --buy-if-keyman-in-top3 --buy-keyman-threshold $F_BUY_THR"
@@ -164,14 +149,11 @@ jobs:
             python scripts/sims/sims_integrated.py $ARGS_COMMON --predict-only
           else
             ARGS_FILTER=""
-            # odds gating
             [ -n "${F_ODDS_BANDS}" ] && ARGS_FILTER="$ARGS_FILTER --odds-bands \"$F_ODDS_BANDS\""
-            [ -n "${F_ODDS_MIN}" ]   && [ "$F_ODDS_MIN" != "0" ] && ARGS_FILTER="$ARGS_FILTER --odds-min $F_ODDS_MIN"
-            [ -n "${F_ODDS_MAX}" ]   && [ "$F_ODDS_MAX" != "0" ] && ARGS_FILTER="$ARGS_FILTER --odds-max $F_ODDS_MAX"
+            [ -n "${F_ODDS_MIN}" ] && [ "$F_ODDS_MIN" != "0" ] && ARGS_FILTER="$ARGS_FILTER --odds-min $F_ODDS_MIN"
+            [ -n "${F_ODDS_MAX}" ] && [ "$F_ODDS_MAX" != "0" ] && ARGS_FILTER="$ARGS_FILTER --odds-max $F_ODDS_MAX"
             [ "${F_REQUIRE_ODDS,,}" = "true" ] && ARGS_FILTER="$ARGS_FILTER --require-odds"
             [ -n "${F_MIN_EV}" ] && [ "$F_MIN_EV" != "0" ] && ARGS_FILTER="$ARGS_FILTER --min-ev $F_MIN_EV"
-
-            # shellsafe eval to keep quotes in bands
             eval python scripts/sims/sims_integrated.py $ARGS_COMMON \
               --odds-base public/odds/v1 $ARGS_FILTER
           fi
